--- a/package.json
+++ b/package.json
@@ -13,7 +13,5 @@
     "es6-module-loader": "^0.17.11",
     "traceur": "0.0.108"
   },
-  "devDependencies": {
-    "lite-server": "^2.2.0"
-  }
+  "devDependencies": {}
 }
